--- a/package.json
+++ b/package.json
@@ -28,16 +28,21 @@
     "@tauri-apps/plugin-sql": "~2.3.1",
     "@tauri-apps/plugin-store": "~2.4.1",
     "@tauri-apps/plugin-updater": "~2.9.0",
-    "react-select": "^5.8.0",
-    "tauri-plugin-macos-permissions-api": "2.3.0",
+    "@tiptap/extension-placeholder": "^3.18.0",
+    "@tiptap/pm": "^3.18.0",
+    "@tiptap/react": "^3.18.0",
+    "@tiptap/starter-kit": "^3.18.0",
     "i18next": "^25.7.2",
     "immer": "^11.1.3",
     "lucide-react": "^0.542.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.4.1",
+    "react-select": "^5.8.0",
     "sonner": "^2.0.7",
     "tailwindcss": "^4.1.16",
+    "tauri-plugin-macos-permissions-api": "2.3.0",
+    "tiptap-markdown": "^0.9.0",
     "zod": "^3.25.76",
     "zustand": "^5.0.8"
   },
