--- a/src-tauri/Info.plist
+++ b/src-tauri/Info.plist
@@ -4,5 +4,7 @@
 <dict>
   <key>NSMicrophoneUsageDescription</key>
   <string>Request microphone access to transcribe audio locally</string>
+  <key>NSAudioCaptureUsageDescription</key>
+  <string>Request system audio access to transcribe meeting participants</string>
 </dict>
 </plist>
